--- a/flora_app/pubspec.yaml
+++ b/flora_app/pubspec.yaml
@@ -1,22 +1,22 @@
 name: flora_app
-description: "A Flutter project for plant identification"
+description: "A Flutter application for plant identification"
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.2
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  file_picker: ^5.2.10
-  image_picker: ^0.8.7+5
-  http: ^1.3.0
+  cupertino_icons: ^1.0.6
+  image_picker: ^1.0.7
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
